# Blackhole-Simulation

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  build.ps1  download_deps.ps1  run.ps1  setup.ps1
.github/workflows/: build.yml
screenshots/: README.md
shaders/: display.frag  fullscreen.vert  postprocess.frag  raytracer.comp
src/: main.cpp
src/Core/: Camera.cpp  Camera.h  Input.cpp  Input.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/Physics/: AccretionDisk.cpp  AccretionDisk.h  BlackHole.cpp  BlackHole.h  Constants.h
src/Rendering/: PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/UI/: Interface.cpp  Interface.h
